update calls, refactor launcher, javadoc, remove code duplication