@@ -3,15 +3,22 @@ package com.ubo.debug.commands;
 import com.sun.jdi.*;
 import com.ubo.debug.ScriptableDebugger;
 
+/**
+ * Renvoie le receveur de la méthode actuellement exécutée.
+ */
 public class ReceiverCommand implements DebuggerCommand {
+
+    @Override
     public void execute(ScriptableDebugger debugger) throws IncompatibleThreadStateException {
         VirtualMachine vm = debugger.getVm();
-        ThreadReference thread = vm.allThreads().get(0);
+        ThreadReference thread = vm.allThreads().getFirst();
 
         if (thread.isSuspended()) {
             try {
+                // Récupère la frame actuelle
                 StackFrame frame = thread.frame(0);
                 ObjectReference thisObject = frame.thisObject();
+
                 if (thisObject != null) {
                     System.out.println("Objet 'this' actuel: " + thisObject);
                 } else {
